tests/typechecker/should_pass/overload_builtins.csp
union = 2

x = 2+union

