tests/typechecker/should_fail/renamer_error.csp
channel x

P = 2?x -> P
